2008-10-02  Andy Buckley  <andy@insectnation.org>

	* The CDF_2004 (Acosta) data file now includes the full range of
	pT for the min bias data at both 630 and 1800 GeV. Previously,
	only the small low-pT insert plot had been entered into HepData.

2008-09-30  Andy Buckley  <andy@insectnation.org>

	* Lots of updates to CDF_2004 (Acosta) UE analysis, including
	sorting jets by E rather than Et, and factorising transverse cone
	code into a function so that it can be called with a random
	"leading jet" in min bias mode. Min bias histos are now being
	trial-filled just with tracks in the transverse cones, since the
	paper is very unclear on this.

	* Discovered a serious caching problem in FastJets projection when
	an empty tracks vector is passed from the
	FinalState. Unfortunately, FastJet provides no API way to solve
	the problem, so we'll have to report this upstream. For now, we're
	solving this for CDF_2004 by explicitly vetoing events with no
	tracks.

	* Added Doxygen to the build with target "dox"

	* Moved detection of whether cross-section information is needed
	into the AnalysisHandler, with dynamic computation by scanning
	contained analyses.

	* Improved robustness of event reading to detect properly when the
	input file is smaller than expected.

2008-09-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis: CDF_2000_S4155203

2008-09-23  Andy Buckley  <andy@insectnation.org>

	* rivetgun can now be built and run without AGILe. Based on a
	patch by Frank Siegert.

2008-09-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Some preliminary numbers for the CDF_2008_LEADINGJETS analysis
	(only transverse region and not all observables. But all we have now.)

2008-09-17  Andy Buckley  <andy@insectnation.org>

	* Breaking up the mammoth "generate" function, to make Python
	mapping easier, among other reasons.

	* Added if-zero-return-zero checking to angle mapping functions,
	to avoid problems where 1e-19 gets mapped on to 2 pi and then