@@ -29,6 +29,7 @@ nobase_dist_data_DATA = \
   Rivet/CDF_2008_S7554427.aida         \
   Rivet/CDF_2008_S7540469.aida         \
   Rivet/CDF_2008_S7782535.aida         \
+  Rivet/CDF_2008_S7828950.aida         \
   Rivet/CDF_2008_MINBIAS.aida          \
   Rivet/CDF_2008_NOTE_9351.aida        \
   Rivet/CDF_2008_LEADINGJETS.aida      \
